// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UnifiedPicker renders correctly with no items 1`] = `
<div
  className="ms-BasePicker ms-BaseExtendedPicker"
  onCopy={[Function]}
  onKeyDown={[Function]}
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone0"
    data-tabster="{\\"uncontrolled\\": {}}"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <div
      className=
          ms-SelectionZone
          ms-UnifiedPicker-selectionZone
          ms-UnifiedPicker-selectionZone
          {
            display: flex;
            flex: 1 1 auto;
          }
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      role="presentation"
    >
      <div
        className=
            ms-BasePicker-text
            ms-UnifiedPicker-text
            {
              border: 1px solid #a19f9d;
              box-sizing: border-box;
              display: flex;
              flex: 1 1 auto;
              min-height: 32px;
              min-width: 180px;
              padding-bottom: 1px;
              padding-left: 1px;
              padding-right: 1px;
              padding-top: 1px;
            }
            &:hover {
              border-color: #c7e0f4;
            }
      >
        <div
          aria-live="polite"
          className=""
          role="status"
        />
        <div
          aria-multiselectable="true"
          aria-orientation="horizontal"
          className=
              ms-UnifiedPicker-listDiv
              ms-UnifiedPicker-listDiv
              {
                display: inline-flex;
                flex-wrap: wrap;
                flex: 1 1 auto;
              }
          role=""
        >
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            className=
                ms-BasePicker-div
                ms-UnifiedPicker-div
                {
                  display: flex;
                  flex: 1 1 auto;
                }
            onDragOver={[Function]}
            onDrop={[Function]}
            role="combobox"
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="off"
              autoComplete="off"
              className=
                  ms-BasePicker-input
                  ms-UnifiedPicker-input
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    border: none;
                    display: flex;
                    flex-grow: 1;
                    flex: 1 1 auto;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 14px;
                    font-weight: 400;
                    height: 34px;
                    margin-bottom: 1px;
                    margin-left: 1px;
                    margin-right: 1px;
                    margin-top: 1px;
                    outline: none;
                    padding-bottom: 0px;
                    padding-left: 6px;
                    padding-right: 6px;
                    padding-top: 0;
                  }
                  &::-ms-clear {
                    display: none;
                  }
              data-lpignore={true}
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onPaste={[Function]}
              style={
                Object {
                  "fontFamily": "inherit",
                }
              }
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-BasePicker
        ms-BaseFloatingPicker
        ms-FloatingSuggestions

  />
</div>
`;

exports[`UnifiedPicker renders correctly with selected and suggested items 1`] = `
<div
  className="ms-BasePicker ms-BaseExtendedPicker"
  onCopy={[Function]}
  onKeyDown={[Function]}
>
  <div
    className=
        ms-FocusZone
        &:focus {
          outline: none;
        }
    data-focuszone-id="FocusZone1"
    data-tabster="{\\"uncontrolled\\": {}}"
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseDownCapture={[Function]}
  >
    <div
      className=
          ms-SelectionZone
          ms-UnifiedPicker-selectionZone
          ms-UnifiedPicker-selectionZone
          {
            display: flex;
            flex: 1 1 auto;
          }
      onClick={[Function]}
      onContextMenu={[Function]}
      onDoubleClick={[Function]}
      onFocusCapture={[Function]}
      onKeyDown={[Function]}
      onKeyDownCapture={[Function]}
      onMouseDown={[Function]}
      onMouseDownCapture={[Function]}
      role="presentation"
    >
      <div
        className=
            ms-BasePicker-text
            ms-UnifiedPicker-text
            {
              border: 1px solid #a19f9d;
              box-sizing: border-box;
              display: flex;
              flex: 1 1 auto;
              min-height: 32px;
              min-width: 180px;
              padding-bottom: 1px;
              padding-left: 1px;
              padding-right: 1px;
              padding-top: 1px;
            }
            &:hover {
              border-color: #c7e0f4;
            }
      >
        <div
          aria-live="polite"
          className=""
          role="status"
        />
        <div
          aria-multiselectable="true"
          aria-orientation="horizontal"
          className=
              ms-UnifiedPicker-listDiv
              ms-UnifiedPicker-listDiv
              {
                display: inline-flex;
                flex-wrap: wrap;
                flex: 1 1 auto;
              }
          role="listbox"
        >
          <div>
             
            red
             
          </div>
          <div>
             
            green
             
          </div>
          <div
            aria-expanded={false}
            aria-haspopup="listbox"
            className=
                ms-BasePicker-div
                ms-UnifiedPicker-div
                {
                  display: flex;
                  flex: 1 1 auto;
                }
            onDragOver={[Function]}
            onDrop={[Function]}
            role="combobox"
          >
            <input
              aria-autocomplete="list"
              autoCapitalize="off"
              autoComplete="off"
              className=
                  ms-BasePicker-input
                  ms-UnifiedPicker-input
                  {
                    -moz-osx-font-smoothing: grayscale;
                    -webkit-font-smoothing: antialiased;
                    border: none;
                    display: flex;
                    flex-grow: 1;
                    flex: 1 1 auto;
                    font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                    font-size: 14px;
                    font-weight: 400;
                    height: 34px;
                    margin-bottom: 1px;
                    margin-left: 1px;
                    margin-right: 1px;
                    margin-top: 1px;
                    outline: none;
                    padding-bottom: 0px;
                    padding-left: 6px;
                    padding-right: 6px;
                    padding-top: 0;
                  }
                  &::-ms-clear {
                    display: none;
                  }
              data-lpignore={true}
              disabled={false}
              onChange={[Function]}
              onClick={[Function]}
              onCompositionEnd={[Function]}
              onCompositionStart={[Function]}
              onCompositionUpdate={[Function]}
              onFocus={[Function]}
              onInput={[Function]}
              onKeyDown={[Function]}
              onPaste={[Function]}
              style={
                Object {
                  "fontFamily": "inherit",
                }
              }
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className=
        ms-BasePicker
        ms-BaseFloatingPicker
        ms-FloatingSuggestions

  />
</div>
`;
